--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ requires = ['setuptools', 'setuptools-scm', 'wheel']
 version_scheme = "post-release"
 
 [tool.black]
+line-length = 120
 exclude = '''
 /(
     \.eggs
@@ -20,7 +21,7 @@ profile = "black"
 multi_line_output = 3
 include_trailing_comma = true
 ensure_newline_before_comments = true
-line_length = 88
+line_length = 120
 known_first_party = "pickle_compression"
 skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
 default_section = 'THIRDPARTY'
