--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ env:
 
 jobs:
   linux-unittests:
-    name: "Linux - unit tests - Python ${{ matrix.PYTHON_VERSION }}"
-    timeout-minutes: 30
+    name: "Unit tests - Python ${{ matrix.PYTHON_VERSION }}"
+    timeout-minutes: 15
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
