--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ env:
 
 jobs:
   linux-unittests:
+    if: false
     name: "Unit tests - Python ${{ matrix.PYTHON_VERSION }}"
     timeout-minutes: 15
     runs-on: ubuntu-latest
@@ -41,19 +42,16 @@ jobs:
         with:
           report-title: "Unit tests Linux - Python ${{ matrix.PYTHON_VERSION }}"
 
-  pre-commit:
+  pre-commit:  # todo switch to pre-commit.ci
     name: "Pre-commit checks"
     timeout-minutes: 15
     runs-on: ubuntu-latest
     steps:
       - name: Checkout branch
         uses: actions/checkout@v3
-      - name: Set up Conda env
-        uses: mamba-org/provision-with-micromamba@v15
+      - name: Install Python 3.11
+        uses: actions/setup-python@v4
         with:
-          cache-env: true
-          extra-specs: |
-            python=3.11
-            pre-commit
+          python-version: 3.11
       - name: Run pre-commit checks
-        run: pre-commit run --all-files
+        uses: pre-commit/action@v3.0.0
