--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ select = [
 ]
 
 [tool.mypy]
-python_version = '3.8'
+python_version = "3.8"
 ignore_missing_imports = true
 no_implicit_optional = true
 check_untyped_defs = true
