--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,9 +1,11 @@
 on: pull_request
+name: Benchmark
+permissions:
+   pull-requests: write
 
 jobs:
-  example_comment_pr:
+  benchmark:
     runs-on: ubuntu-latest
-    name: Benchmark
     steps:
       - uses: actions/checkout@v3
       - name: Set up conda env
