--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
-name = pickle_compression
+name = pickle-compression
+version = attr: pickle_compression._version.__version__
 description = A python package for efficient pickling.
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -16,9 +17,16 @@ classifiers =
 [options]
 include_package_data = true
 install_requires =
+    numpy
 python_requires = >=3.8
 packages = find:
 
+
+[options.extra_require]
+scikit-learn =
+    scikit-learn
+lightgbm =
+    lightgbm
 
 [options.packages.find]
 include =
