Add build scripts

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,19 +15,15 @@ classifiers =
     Programming Language :: Python :: 3.11
 
 [options]
-include_package_data = true
+include_package_data = True
 install_requires =
     numpy
 python_requires = >=3.8
 packages = find:
 
 
-[options.extra_require]
+[options.extras_require]
 scikit-learn =
     scikit-learn
 lightgbm =
     lightgbm
-
-[options.packages.find]
-include =
-    pickle_compression
