--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = pickle-compression
-version = attr: pickle_compression._version.__version__
-description = A python package for efficient pickling.
+name = slim-trees
+version = attr: slim_trees._version.__version__
+description = A python package for efficient pickling of ML models.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pavelzw/pickle-compression
+url = https://github.com/pavelzw/slim-trees
 author = Pavel Zwerschke
 author_email = pavelzw@gmail.com
 classifiers =
