--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,7 @@
 name: Build
 on: push
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -19,7 +21,7 @@ jobs:
           name: artifact
           path: dist/*
 
-  upload-pypi:
+  release:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     needs: [build]
     runs-on: ubuntu-latest
@@ -39,3 +41,8 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        with:
+          generate_release_notes: true
+          draft: true
