--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,10 @@
 [metadata]
-name = pickle_compression
-description = A python package for efficient pickling.
+name = slim-trees
+version = attr: slim_trees._version.__version__
+description = A python package for efficient pickling of ML models.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pavelzw/pickle-compression
+url = https://github.com/pavelzw/slim-trees
 author = Pavel Zwerschke
 author_email = pavelzw@gmail.com
 classifiers =
@@ -14,12 +15,15 @@ classifiers =
     Programming Language :: Python :: 3.11
 
 [options]
-include_package_data = true
+include_package_data = True
 install_requires =
+    numpy
 python_requires = >=3.8
 packages = find:
 
 
-[options.packages.find]
-include =
-    pickle_compression
+[options.extras_require]
+scikit-learn =
+    scikit-learn
+lightgbm =
+    lightgbm
