--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -22,6 +22,13 @@ jobs:
         run: |
           echo "_(benchmark **${{ github.run_id }}** / attempt **${{ github.run_attempt }}**)_" >> benchmark.md
           python benchmark.py >> benchmark.md
+      - name: Cache models
+        uses: actions/cache@v2
+        env:
+          cache-name: benchmark-model-cache
+        with:
+          path: ~/examples/benchmark_models
+          key: ${{ runner.os }}-models-${{ hashFiles('benchmark.py') }}
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
         with:
