--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,8 +1,8 @@
 name: Benchmark
 on:
-  - pull_request:
-  - push:
-      branches: [main]
+  push:
+    branches: [main]
+  pull_request:
 permissions:
   pull-requests: write
   contents: read
