dont know why it works locally but this should fix it

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -38,6 +38,5 @@ jobs:
         with:
           filePath: benchmark.md
           comment_tag: benchmark
-      - name: "Add benchmark to Job Summary"
-        run: |
-          cat benchmark.md >> $GITHUB_STEP_SUMMARY
+      - name: Add benchmark to Job Summary
+        run: cat benchmark.md >> "$GITHUB_STEP_SUMMARY"
