Add Documentation and dependencies category, add no benchmark label

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -10,6 +10,12 @@ changelog:
     - title: Bug fixes
       labels:
         - bug
+    - title: Documentation
+      labels:
+        - documentation
+    - title: Dependencies
+      labels:
+        - dependencies
     - title: Other changes
       labels:
-        - "*"
+        - '*'
