--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   benchmark:
+    if: github.event_name == 'push' || !contains(github.event.pull_request.labels.*.name, 'no benchmark')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
