Add pdf and move to quantco organisation

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,9 @@ version = attr: slim_trees._version.__version__
 description = A python package for efficient pickling of ML models.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pavelzw/slim-trees
+url = https://github.com/quantco/slim-trees
 author = Pavel Zwerschke
-author_email = pavelzw@gmail.com
+author_email = pavel.zwerschke@quantco.com
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.8
