--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -52,10 +52,8 @@ jobs:
               })
 
               // Check if any of the comments was posted by the bot and could be replaced
-              const heading = content.split('\n')[0];
               for (const comment of comments.data) {
-                console.log(comment.user?.login)
-                if (comment.user?.login === 'github-actions[bot]' && comment.body?.startsWith(heading)) {
+                if (comment.user?.login === 'github-actions[bot]') {
                   await github.rest.issues.updateComment({
                     comment_id: comment.id,
                     owner: context.repo.owner,
