--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -34,7 +34,7 @@ jobs:
       #     python benchmark.py
       #     echo "_(benchmark **${{ github.run_id }}** / attempt **${{ github.run_attempt }}**)_" >> result.md
       #     cat benchmark.md >> result.md
-      - run: echo "test (updated)" > result.md
+      - run: echo "test (updated) 2" > result.md
       - name: Comment on PR
         uses: actions/github-script@v6
         with:
