--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -13,30 +13,31 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      # - name: Set up conda env
-      #   uses: mamba-org/setup-micromamba@v1
-      #   with:
-      #     environment-file: environment.yml
-      #     cache-environment: true
-      #     create-args: python=3.11
-      # - name: Install repository
-      #   run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
-      # - name: Cache models
-      #   uses: actions/cache@v3
-      #   env:
-      #     cache-name: benchmark-model-cache
-      #   with:
-      #     path: examples/benchmark_models
-      #     key: models-${{ hashFiles('benchmark.py', '.github/workflows/benchmark.yml') }}
-      # - name: Run benchmark
-      #   shell: bash -el {0}
-      #   run: |
-      #     python benchmark.py
-      #     echo "_(benchmark **${{ github.run_id }}** / attempt **${{ github.run_attempt }}**)_" >> result.md
-      #     cat benchmark.md >> result.md
-      - run: echo "test (updated) 2" > result.md
+      - name: Set up conda env
+        uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-file: environment.yml
+          cache-environment: true
+          create-args: python=3.11
+      - name: Install repository
+        run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
+      - name: Cache models
+        uses: actions/cache@v3
+        env:
+          cache-name: benchmark-model-cache
+        with:
+          path: examples/benchmark_models
+          key: models-${{ hashFiles('benchmark.py', '.github/workflows/benchmark.yml') }}
+      - name: Run benchmark
+        shell: bash -el {0}
+        run: |
+          python benchmark.py
+          echo "_(benchmark **${{ github.run_id }}** / attempt **${{ github.run_attempt }}**)_" >> result.md
+          cat benchmark.md >> result.md
       - name: Comment on PR
+        # thollander/actions-comment-pull-request is not whitelisted
         uses: actions/github-script@v6
+        if: github.event_name == 'pull_request'
         with:
           script: |
             fs = require('fs')
@@ -74,11 +75,5 @@ jobs:
             }
 
             createOrUpdateComment(fs.readFileSync('result.md', 'utf8'))
-      # - name: Comment on PR
-      #   if: github.event_name == 'pull_request'
-      #   uses: thollander/actions-comment-pull-request@v2
-      #   with:
-      #     filePath: result.md
-      #     comment_tag: benchmark
-      # - name: Add benchmark to Job Summary
-      #   run: cat benchmark.md >> "$GITHUB_STEP_SUMMARY"
+      - name: Add benchmark to Job Summary
+        run: cat benchmark.md >> "$GITHUB_STEP_SUMMARY"
