--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,7 @@ jobs:
     # needs: [build]
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       # - uses: actions/download-artifact@v3
       #   with:
       #     name: artifact
@@ -36,7 +37,7 @@ jobs:
         with:
           file: ./slim_trees/_version.py
           token: ${{ secrets.GITHUB_TOKEN }}
-          version-extraction-override: 'command:./read_version.sh'
+          version-extraction-override: 'command:./.github/scripts/read_version.sh'
       - run: |
           echo "Version changed: ${{ steps.version-metadata.outputs.changed }}"
       - run: |
