--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,8 @@ jobs:
         with:
           file: ./slim_trees/_version.py
           token: ${{ secrets.GITHUB_TOKEN }}
-          version-extraction-override: 'command:./.github/scripts/read_version.sh'
+          version-extraction-override: 'command:grep "version_info =" | sed "s/^.*(\([^()]*\)).*$/\1/" | sed "s/, /./g"'
+          # version-extraction-override: 'command:./.github/scripts/read_version.sh'
       - run: |
           echo "Version changed: ${{ steps.version-metadata.outputs.changed }}"
       - run: |
