--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -21,6 +21,7 @@ jobs:
           create-args: python=3.11
       - name: Install repository
         run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
+        shell: bash -el {0}
       - name: Cache models
         uses: actions/cache@v3
         env:
