--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -16,11 +16,12 @@ jobs:
       - name: Set up conda env
         uses: mamba-org/setup-micromamba@v1
         with:
-          environment-file: environment.yml
+          environment-file: environment-deprecated.yml
           cache-environment: true
           create-args: python=3.11
       - name: Install repository
         run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
+        shell: bash -el {0}
       - name: Cache models
         uses: actions/cache@v3
         env:
