--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,9 @@ jobs:
             pytest-emoji
       - name: Install repository
         run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
+      - name: debug
+        run: |
+          micromamba list
       - name: Run unittests
         uses: pavelzw/pytest-action@v2
         with:
