--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 [project]
 name = "slim-trees"
 description = "A python package for efficient pickling of ML models."
-version = "0.2.1"
+version = "0.2.2"
 readme = "README.md"
 license = "MIT"
 requires-python = ">=3.8"
@@ -25,7 +25,7 @@ dependencies = [
 
 [project.optional-dependencies]
 lightgbm = [
-    "lightgbm",
+    "lightgbm <4.0",
 ]
 scikit-learn = [
     "scikit-learn <1.3.0",
