--- a/environment-deprecated.yml
+++ b/environment-deprecated.yml
@@ -6,9 +6,9 @@ channels:
 dependencies:
   - lightgbm <4.0
   - numpy
-  - python>=3.8
+  - python >=3.8
   - pre-commit
   - pandas
-  - scikit-learn <1.3.0
-  - pytest>=7.0
+  - scikit-learn >=1.3.0,<1.4
+  - pytest >=7.0
   - hatchling
