--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
       fail-fast: false
       matrix:
         PYTHON_VERSION: ['3.8', '3.9', '3.10', '3.11']
+        SKLEARN_VERSION: ['1.1','1.2','1.3']
     steps:
       - uses: actions/checkout@v3
       - name: Set up conda env
@@ -30,6 +31,7 @@ jobs:
           environment-file: environment-deprecated.yml
           create-args: >-
             python=${{ matrix.PYTHON_VERSION }}
+            scikit-learn=${{ SKLEARN_VERSION }}
             pytest-md
             pytest-emoji
       - name: Install repository
