--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        PYTHON_VERSION: ['3.8', '3.9', '3.10', '3.11']
-        SKLEARN_VERSION: ['1.1', '1.2', '1.3']
+        job:
+          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '1.1' }
+          - { PYTHON_VERSION: '3.9', SKLEARN_VERSION: '1.1' }
+          - { PYTHON_VERSION: '3.10', SKLEARN_VERSION: '1.1' }
+          - { PYTHON_VERSION: '3.11', SKLEARN_VERSION: '1.1' }
+          - { PYTHON_VERSION: '3.11', SKLEARN_VERSION: '1.2' }
+          - { PYTHON_VERSION: '3.11', SKLEARN_VERSION: '1.3' }
     steps:
       - uses: actions/checkout@v3
       - name: Set up conda env
