--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
   linux-unittests:
     name: >
       Unit tests - Python ${{ matrix.PYTHON_VERSION }}
-      ${{ matrix.SKLEARN_VERSION != '' || 'sklearn ' }}${{ matrix.SKLEARN_VERSION }}
-      ${{ matrix.LGBM_VERSION != '' || 'lightgbm ' }}${{ matrix.LGBM_VERSION }}
+      ${{ matrix.SKLEARN_VERSION != '' && 'sklearn ' || '' }}${{ matrix.SKLEARN_VERSION }}
+      ${{ matrix.LGBM_VERSION != '' && 'lightgbm ' || '' }}${{ matrix.LGBM_VERSION }}
     timeout-minutes: 15
     runs-on: ubuntu-latest
     strategy:
@@ -46,8 +46,8 @@ jobs:
             python=${{ matrix.PYTHON_VERSION }}
             pytest-md
             pytest-emoji
-            scikit-learn${{ matrix.SKLEARN_VERSION == '' || '=' }}${{ matrix.SKLEARN_VERSION }}
-            lightgbm${{ matrix.LGBM_VERSION == '' || '=' }}${{ matrix.LGBM_VERSION }}
+            scikit-learn${{ matrix.SKLEARN_VERSION == '' && '' || '=' }}${{ matrix.SKLEARN_VERSION }}
+            lightgbm${{ matrix.LGBM_VERSION == '' && '' || '=' }}${{ matrix.LGBM_VERSION }}
       - name: Install repository
         run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
       - name: Run unittests
@@ -56,8 +56,8 @@ jobs:
           custom-arguments: ${{ matrix.SKLEARN_VERSION == '' || '-k sklearn' }}${{ matrix.LGBM_VERSION == '' || ' -k lgbm' }}
           report-title: >
             Unit tests - Python ${{ matrix.PYTHON_VERSION }}
-            ${{ matrix.SKLEARN_VERSION != '' || 'sklearn ' }}${{ matrix.SKLEARN_VERSION }}
-            ${{ matrix.LGBM_VERSION != '' || 'lightgbm ' }}${{ matrix.LGBM_VERSION }}
+            ${{ matrix.SKLEARN_VERSION != '' && 'sklearn ' || '' }}${{ matrix.SKLEARN_VERSION }}
+            ${{ matrix.LGBM_VERSION != '' && 'lightgbm ' || '' }}${{ matrix.LGBM_VERSION }}
 
   linux-unittests-pixi:
     name: "Unit tests Pixi - Python ${{ matrix.PYTHON_VERSION }}"
