--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,20 +16,19 @@ jobs:
   linux-unittests:
     name: >-
       Unit tests - Python ${{ matrix.PYTHON_VERSION }}
-      ${{ matrix.SKLEARN_VERSION != '' && 'sklearn ' || '' }}${{ matrix.SKLEARN_VERSION }}
-      ${{ matrix.LGBM_VERSION != '' && 'lightgbm ' || '' }}${{ matrix.LGBM_VERSION }}
+      ${{ matrix.SKLEARN_VERSION }}${{ matrix.LGBM_VERSION }}
     timeout-minutes: 15
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         include:
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '1.1', LGBM_VERSION: '' }
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '1.2', LGBM_VERSION: '' }
-#          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '1.3', LGBM_VERSION: '' }
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: '3.2' }
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: '3.3' }
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: '4.0' }
+          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: 'scikit-learn=1.1', LGBM_VERSION: '' }
+          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: 'scikit-learn=1.2', LGBM_VERSION: '' }
+#          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: 'scikit-learn=1.3', LGBM_VERSION: '' }
+          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: 'lightgbm=3.2' }
+          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: 'lightgbm=3.3' }
+          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: 'lightgbm=4.0' }
           - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: '' }
           - { PYTHON_VERSION: '3.9', SKLEARN_VERSION: '', LGBM_VERSION: '' }
           - { PYTHON_VERSION: '3.10', SKLEARN_VERSION: '', LGBM_VERSION: '' }
@@ -45,8 +44,7 @@ jobs:
             python=${{ matrix.PYTHON_VERSION }}
             pytest-md
             pytest-emoji
-            scikit-learn${{ matrix.SKLEARN_VERSION != '' && '=' || '' }}${{ matrix.SKLEARN_VERSION }}
-            lightgbm${{ matrix.LGBM_VERSION != '' && '=' || '' }}${{ matrix.LGBM_VERSION }}
+            ${{ matrix.SKLEARN_VERSION }}${{ matrix.LGBM_VERSION }}
       - name: Install repository
         run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
       - name: Run unittests
@@ -55,8 +53,7 @@ jobs:
           custom-arguments: ${{ matrix.SKLEARN_VERSION != '' && '-k sklearn' || '' }}${{ matrix.LGBM_VERSION != '' && ' -k lgbm' || '' }}
           report-title: >-
             Unit tests - Python ${{ matrix.PYTHON_VERSION }}
-            ${{ matrix.SKLEARN_VERSION != '' && 'sklearn ' || '' }}${{ matrix.SKLEARN_VERSION }}
-            ${{ matrix.LGBM_VERSION != '' && 'lightgbm ' || '' }}${{ matrix.LGBM_VERSION }}
+            ${{ matrix.SKLEARN_VERSION }}${{ matrix.LGBM_VERSION }}
 
   linux-unittests-pixi:
     name: "Unit tests Pixi - Python ${{ matrix.PYTHON_VERSION }}"
