--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,18 +6,18 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: check-toml
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.284
+  - repo: https://github.com/quantco/pre-commit-mirrors-ruff
+    rev: 0.0.284
     hooks:
-      - id: ruff
-        args: [--fix, --exit-non-zero-on-fix]
-  - repo: https://github.com/psf/black
+      - id: ruff-conda
+  - repo: https://github.com/quantco/pre-commit-mirrors-black
     rev: 23.7.0
     hooks:
-      - id: black
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.5.0
+      - id: black-conda
+        args:
+          - --safe
+          - --target-version=py38
+  - repo: https://github.com/quantco/pre-commit-mirrors-mypy
+    rev: 1.5.0
     hooks:
-    -   id: mypy
-        additional_dependencies:
-          - types-setuptools
+      - id: mypy-conda
